--- a/style.css
+++ b/style.css
@@ -23,47 +23,50 @@ body {
     color: var(--accentColor);
 }
 
+.nav-bar {
+    border-bottom: solid 1px white;
+    background-color: rgba(10, 10, 10, 0.8);
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
 
 .logo {
-    margin-top: 50px;
-    margin-bottom: -2em;
+    height: 60%;
+
+    transition: all .2s;
 }
 
-.logo p {
-    margin-top: 10px;
-    font-size: 3em;
-    text-align: center;
-}
-
-.logo img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100px;
-
-    transition: all .5s;
-}
-
-.logo img:hover{
+.logo:hover {
     transform: scale(1.2);
 }
 
 .socials {
+    margin-left: auto;
     text-align: center;
 }
-.socials a{
+
+.socials a {
     transition: all 0.5s;
 }
-.socials a:hover{
-    font-size: 1.25em;
+
+.socials a:hover {
+    transform: scale(1.2);
 }
 
 .intro {
     text-align: center;
     margin-top: 5%;
 }
-.game-collection{
-    margin:auto;
+
+.game-collection {
+    margin: auto;
     width: 500px;
 }
 
