--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 :root {
-    --textColor: #dfdfdf;
-    --backgroundColor: #0f0f0f;
+    --textColor: #40311F;
+    --backgroundColor: #E6DCD1;
+}
+
+@keyframes scrollAnimation{
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
 }
 
 body {
@@ -8,7 +17,38 @@ body {
     color: var(--textColor);
 }
 
-.header {
-    text-align: center;
-    margin-top: 5%;
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-left: 50%;
+    margin-top: 35vh;
+    transform: translate(-50%,-50%);
+}
+
+.name {
+    font-size: 15vw;
+    font-weight: bold;
+    color: #40311F
+}
+
+.description {
+    font-size: 2.5vw;
+    color: #71675B;
+}
+
+.project-image-slider {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    overflow: hidden;
+    white-space: nowrap;
+    animation: scrollAnimation 10s linear infinite;
+}
+
+.project-image-slider img{
+    flex: 0 0 auto;
+    height: auto;
 }
