--- a/style.css
+++ b/style.css
@@ -57,11 +57,17 @@
 
 :root[data-theme="light"] {
     --text: #1f1f1f;
+    --text-medium: #1f1f1fbf;
+    --text-medium-light: #1f1f1f80;
+    --text-light: #1f1f1f40;
     --background: #F7F6F0;
 }
 
 :root[data-theme="dark"] {
     --text: #F7F6F0;
+    --text-medium: #f7f6f0bf;
+    --text-medium-light: #f7f6f080;
+    --text-light: #f7f6f040;
     --background: #1f1f1f;
 }
 
@@ -257,9 +263,20 @@ a:hover {
     }
 }
 
+/* #region Projects*/
+
+.project-area {
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.project-area h1 {
+    text-align: center;
+    font-size: 6vw;
+}
+
 .projects {
     --opacity-transition: 1s;
-
     display: flex;
     width: 60%;
     height: 30vw;
@@ -279,11 +296,12 @@ a:hover {
     padding-left: 5%;
     transition: font-size .25s;
     border-radius: 10px;
+    font-size: 1vw;
 }
 
 .project-entry:hover {
-    font-size: 1.25em;
-    background-color: #ffffff28;
+    font-size: 1.25vw;
+    background-color: var(--text-medium-light);
 }
 
 .project-view {
@@ -302,27 +320,26 @@ a:hover {
 .about-projects {
     z-index: -2;
     transition: opacity var(--opacity-transition);
+    font-size: 1.5vw;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
 }
 
-.about-projects h1 {
+.project-view h1 {
     margin: 0;
-    font-size: 4em;
+    font-size: 3em;
 }
 
-.about-projects p {
-    font-size: 1.3em;
-}
 
 .project-info {
     opacity: 0;
     transition: opacity var(--opacity-transition);
     border-radius: 10px;
-    border: 3px solid black;
-    background-color: black;
+    border: 3px solid var(--text);
+    background-color: var(--text);
+    color: var(--background);
 }
 
 .project-thumb {
@@ -335,7 +352,7 @@ a:hover {
 
 .title-bar,
 .description-bar {
-    background-color: black;
+    background-color: var(--text);
     border-radius: 10px;
     position: absolute;
     width: 100%;
@@ -349,18 +366,19 @@ a:hover {
 }
 
 .title-bar h1 {
-    font-size: 1.25em;
+    font-size: 1.25vw;
     padding: 10px;
     margin: 0;
     flex: 1;
+    text-align: left;
 }
 
 .dot {
-    --dot-size: 1em;
+    --dot-size: 1vw;
 
     flex: 0 0 var(--dot-size);
     border-radius: 50%;
-    background-color: var(--text);
+    background-color: var(--background);
     height: var(--dot-size);
     margin: 5px;
 }
@@ -368,26 +386,32 @@ a:hover {
 .description-bar {
     bottom: 0;
     height: 25%;
+    display: flex;
+    flex-direction: column;
+    font-size: 1vw;
 }
 
 .description-bar p {
-    position: absolute;
-    top: 0;
+    flex: 0 0 60%;
     margin: 0;
-    padding: 10px;
-    font-size: 1.25em;
+    /* padding: 10px; */
+    text-overflow: ellipsis;
+    padding: 1%;
 }
 
-.tags {
-    position: absolute;
-    padding: 10px;
-    bottom: 0;
-    margin-bottom: 10px;
-    font-size: 1.25em;
+.description-bar .tags {
+    flex: 1;
+    /* padding: 10px; */
+    /* bottom: 0; */
+    /* margin-bottom: 10px; */
+    margin: 1%;
 }
 
-.tags * {
+.description-bar .tags * {
     border-radius: 10px;
     background-color: var(--background);
-    padding: 10px;
+    color: var(--text);
+    padding: 1%;
 }
+
+/* #endregion */
